--- a/app/views/teams/show/_team_info.html.erb
+++ b/app/views/teams/show/_team_info.html.erb
@@ -3,7 +3,7 @@
   <p class="text-soft">Information and statistics about this team.</p>
 </div>
 
-<%= content_tag(:p, class: 'mb-2 text-right') { link_to 'View your personal progress', team_member_path(team, current_user), class: 'btn-link text-xs' } if @current_user_member_of_team %>
+<%= content_tag(:p, class: 'mb-2 text-right') { link_to 'View your personal progress', team_member_path(team, current_user), class: 'btn-link text-xs' } if (@current_user_member_of_team && !@current_user_owns_team) || (@current_user_owns_team && team.include_coach?) %>
 
 <!-- Season Dates Card -->
 <div
@@ -14,7 +14,7 @@
 >
   <div class="flex flex-wrap items-center justify-between gap-2 mb-6">
     <h2 class="text-lg font-semibold text-slate-700 dark:text-slate-300">Season Dates</h2>
-    <% if team.season_dates? && team.season_in_progress? %>
+    <% if team.season_dates? && (team.season_in_progress? || team.season_over?) %>
       <button data-action="mousedown->calendar#toggleCalendar" class="btn btn-primary btn-muted btn-sm gap-1.5">
         <%= inline_svg_tag 'icons/calendar.svg', class: 'size-4' %>
         <span data-calendar-target="toggleButtonText">Calendar</span>
