--- a/app/views/devise/registrations/_edit_user.html.erb
+++ b/app/views/devise/registrations/_edit_user.html.erb
@@ -164,8 +164,8 @@
       <% end %>
 
       <div class="flex items-center gap-2 max-sm:mb-2">
-        <%= f.check_box :format_as_you_type, { checked: true, class: 'form-input-checkbox', data: { action: 'change->phone#toggleFormatting' } } %>
-        <%= f.label :format_as_you_type, 'Format as you type', class: 'form-check-label text-sm' %>
+        <%= check_box_tag 'format_as_you_type', '1', true, class: 'form-input-checkbox', data: { action: 'change->phone#toggleFormatting' } %>
+        <%= label_tag 'format_as_you_type', 'Format as you type', class: 'form-check-label text-sm' %>
       </div>
     </div>
 
