--- a/app/views/users/_runs_today.html.erb
+++ b/app/views/users/_runs_today.html.erb
@@ -16,9 +16,9 @@
   <% else %>
     <div class="flex flex-col items-center justify-center gap-6 py-12">
       <% if user == current_user %>
-        <p class="text-soft">You haven't gone on any runs yet today.</p>
+        <p class="text-soft text-center">You haven&#8217;t gone on any runs yet today.</p>
       <% else %>
-        <p class="text-soft"><%= user.default_name %> hasn't gone on any runs yet today.</p>
+        <p class="text-soft text-center"><%= user.default_name %> hasn&#8217;t gone on any runs yet today.</p>
       <% end %>
     </div>
   <% end %>
