refactor: add scope and description to manfiest.json.erb

--- a/app/views/service_worker/manifest.json.erb
+++ b/app/views/service_worker/manifest.json.erb
@@ -1,7 +1,15 @@
 {
-  "short_name": "PaceMaker",
-  "name": "PaceMaker",
   "id": "/",
+  "scope": "https://pace-maker.onrender.com",
+  "lang": "en-us",
+  "name": "PaceMaker",
+  "short_name": "PaceMaker",
+  "description": "PaceMaker is a cross country running app that helps cross country coaches and athletes track and meet their goals.",
+  "start_url": "/",
+  "dir": "ltr",
+  "display": "standalone",
+  "background_color": "#64748b",
+  "theme_color": "#64748b",
   "icons": [
     {
       "src": "<%= image_path "windows11/SmallTile.scale-100.png" %>",
@@ -451,10 +459,5 @@
       "src": "<%= image_path "ios/1024.png" %>",
       "sizes": "1024x1024"
     }
-  ],
-  "start_url": "/",
-  "background_color": "#64748b",
-  "display": "standalone",
-  "scope": "/",
-  "theme_color": "#64748b"
+  ]
 }
