feat: add pwa shortcuts

--- a/app/views/service_worker/manifest.json.erb
+++ b/app/views/service_worker/manifest.json.erb
@@ -10,6 +10,38 @@
   "display": "standalone",
   "background_color": "#64748b",
   "theme_color": "#64748b",
+  "shortcuts": [
+    {
+      "name": "Home",
+      "url": "/",
+      "description": "Recent updates."
+    },
+    {
+      "name": "Search",
+      "url": "/search",
+      "description": "Search for teams or team members."
+    },
+    {
+      "name": "Teams",
+      "url": "/teams",
+      "description": "View your teams."
+    },
+    {
+      "name": "Profile",
+      "url": "/profile",
+      "description": "View your profile."
+    },
+    {
+      "name": "Settings",
+      "url": "/users/edit",
+      "description": "Change your settings."
+    },
+    {
+      "name": "New Run",
+      "url": "/runs/new",
+      "description": "Log a new run."
+    }
+  ],
   "icons": [
     {
       "src": "<%= image_path "windows11/SmallTile.scale-100.png" %>",
