--- a/app/views/users/_help.html.erb
+++ b/app/views/users/_help.html.erb
@@ -5,7 +5,7 @@
 
 <div class="pb-6">
   <h2 class="subheading">App Installation Instructions</h2>
-  <p class="text-sm text-soft">Follow the instructions below to install PaceMaker on your device for quicker access.</p>
+  <p class="text-sm text-soft text-pretty">Follow the instructions below to install PaceMaker as a progressive web app on your device.</p>
 </div>
 
 <div class="mb-24" data-controller="pwa">
@@ -31,7 +31,7 @@
       <ul class="mt-1.5 list-disc ml-4 text-sm">
         <li>Open the browser menu (three dots in the top-right).</li>
         <li>Select <strong>&#8220;Install App&#8221;</strong> or click the install icon in the address bar.</li>
-        <li>Click <strong>install</strong> to confirm.</li>
+        <li>Click <strong>Install</strong> to confirm.</li>
       </ul>
     </div>
 
@@ -40,7 +40,7 @@
       <h2 class="font-semibold">Microsoft Edge</h2>
       <ul class="mt-1.5 list-disc ml-4 text-sm">
         <li>Click the <strong>&#8220;Install App&#8221;</strong> icon in the address bar.</li>
-        <li>Click <strong>install</strong> to confirm.</li>
+        <li>Click <strong>Install</strong> to confirm.</li>
       </ul>
     </div>
 
