fix: hide pwa banner by default

--- a/app/views/shared/_pwa_banner.html.erb
+++ b/app/views/shared/_pwa_banner.html.erb
@@ -1,5 +1,5 @@
 <% if show_pwa_banner? %>
-  <div data-controller="pwa-banner" data-pwa-banner-target="banner" class="z-50 mb-12 w-auto max-w-full rounded-xl border border-blue-300 bg-blue-50 p-4 text-blue-600 dark:border-blue-800 dark:bg-blue-950 dark:text-blue-400">
+  <div data-controller="pwa-banner" data-pwa-banner-target="banner" class="hidden z-50 mb-12 w-auto max-w-full rounded-xl border border-blue-300 bg-blue-50 p-4 text-blue-600 dark:border-blue-800 dark:bg-blue-950 dark:text-blue-400">
     <div class="flex items-center justify-between gap-4">
       <div>
         <p class="max-sm:text-sm text-slate-800 dark:text-slate-100">Install PaceMaker as a progressive web app on your device for quick and easy access!</p>
