--- a/app/views/teams/shared/_team_links.html.erb
+++ b/app/views/teams/shared/_team_links.html.erb
@@ -1,4 +1,3 @@
-<% request = team.join_requests.find_by(user_id: current_user) %>
 <% current_page_team = current_page?(team_path(team)) %>
 
 <% if @current_user_owns_team %>
@@ -28,9 +27,7 @@
     <%= inline_svg_tag 'icons/trash.svg', class: 'size-5' %>
     Delete team
   </button>
-<% end %>
-
-<% if @current_user_member_of_team && !@current_user_owns_team %>
+<% else %>
   <%= link_to team_settings_path(team), class: 'dropdown-option' do %>
     <%= inline_svg_tag 'icons/settings.svg', class: 'size-5' %>
     View team settings
