fix: redundant web app description in manifest

--- a/app/views/service_worker/manifest.json.erb
+++ b/app/views/service_worker/manifest.json.erb
@@ -4,7 +4,7 @@
   "lang": "en-us",
   "name": "PaceMaker",
   "short_name": "PaceMaker",
-  "description": "PaceMaker is a cross country running app that helps cross country coaches and athletes track and meet their goals.",
+  "description": "PaceMaker is a cross country running app that helps coaches and athletes track and meet their goals.",
   "start_url": "/",
   "dir": "ltr",
   "display": "standalone",
