--- a/app/views/devise/registrations/_edit_user.html.erb
+++ b/app/views/devise/registrations/_edit_user.html.erb
@@ -5,7 +5,7 @@
 
 <div class="my-6">
   <h2 class="mb-2 text-lg font-normal text-slate-700 dark:text-slate-200">Linked Accounts</h2>
-  <p class="text-sm text-slate-600 dark:text-slate-400">Manage your linked accounts for easier sign-in.</p>
+  <p class="text-sm text-slate-600 dark:text-slate-400">Manage your linked accounts.</p>
 </div>
 
 <div
@@ -14,8 +14,9 @@
   data-modal-show-modal-class="opacity-100 scale-100 pointer-events-auto"
   data-modal-hide-backdrop-class="opacity-0 pointer-events-none"
   data-modal-show-backdrop-class="opacity-100 pointer-events-auto"
-  class="form-group"
+  class="form-group flex flex-col items-start"
 >
+  <h2 class="font-semibold mb-2">Google</h2>
   <% if current_user.google_account_linked? %>
     <button data-action="mousedown->modal#open" data-modal-id="unlinkGoogleAccountModal" <%= 'disabled' if resource.password_changed_at.nil? %> class="btn btn-white btn-outline gap-2">
       <%= inline_svg_tag 'icons/google-logo.svg', class: 'size-5' %>
@@ -64,7 +65,55 @@
       <%= inline_svg_tag 'icons/google-logo.svg', class: 'size-5' %>
       Link Google Account
     <% end %>
-    <p class="help-text my-1">The email on your Google account must match the email on your PaceMaker account.</p>
+    <p class="help-text my-1">Link your Google account for easier sign-in. The email on your Google account must match the email on your PaceMaker account.</p>
+  <% end %>
+
+  <h2 class="font-semibold mt-6 mb-2">Strava</h2>
+  <% if current_user.strava_account_linked? %>
+    <div class="flex items-center gap-x-4 gap-y-2 flex-wrap">
+      <button data-action="mousedown->modal#open" data-modal-id="unlinkStravaAccountModal" class="btn btn-white btn-outline gap-2">
+        Disconnect from Strava
+      </button>
+    </div>
+
+    <!-- Disconnect Strava Account Modal Backdrop -->
+    <div
+      data-modal-target="backdrop"
+      data-modal-id="unlinkStravaAccountModal"
+      data-action="mousedown->modal#backdropClose"
+      class="modal-backdrop opacity-0 pointer-events-none"></div>
+
+    <!-- Disconnect Strava Account Modal -->
+    <div
+      id="unlinkStravaAccountModal"
+      role="dialog"
+      aria-label="Disconnect Strava Account Confirmation"
+      tabindex="-1"
+      data-modal-target="modal"
+      class="modal opacity-0 scale-75 pointer-events-none"
+    >
+      <div class="flex flex-col space-y-1.5 text-center sm:text-left">
+        <h2 class="text-lg font-semibold leading-none tracking-tight">Disconnect Strava Account?</h2>
+        <p class="text-soft text-sm">Are you sure you want to disconnect your Strava account? <span class="underline underline-offset-2 font-semibold">You will no longer be able to sync your activities from Strava.</span></p>
+      </div>
+
+      <div class="flex flex-col-reverse sm:flex-row sm:justify-end sm:space-x-2 mt-4">
+        <button data-action="mousedown->modal#close" data-modal-id="unlinkStravaAccountModal" type="button" class="btn btn-dark btn-muted mt-2 sm:mt-0">Nevermind</button>
+        <%= button_to unlink_strava_account_user_path(current_user), method: :delete, class: 'btn btn-destructive gap-2 w-full' do %>
+          Disconnect Strava Account
+        <% end %>
+      </div>
+
+      <button data-action="mousedown->modal#close" type="button" data-modal-id="unlinkStravaAccountModal" class="modal-x-btn">
+        <%= inline_svg_tag 'icons/x-mark.svg', class: 'size-4' %>
+        <span class="sr-only">Close</span>
+      </button>
+    </div>
+
+  <% else %>
+    <%= button_to user_strava_omniauth_authorize_path, data: { turbo: 'false' }, class: 'rounded-lg hover:brightness-75 transition-all duration-200 ease-in-out' do %>
+      <%= image_tag 'btn_strava_connect.svg', alt: 'Connect to Strava', class: 'rounded-lg' %>
+    <% end %>
   <% end %>
 </div>
 
