feat: add run syncing with Strava

--- a/app/views/devise/registrations/_edit_user.html.erb
+++ b/app/views/devise/registrations/_edit_user.html.erb
@@ -74,6 +74,10 @@
       <button data-action="mousedown->modal#open" data-modal-id="unlinkStravaAccountModal" class="btn btn-white btn-outline gap-2">
         Disconnect from Strava
       </button>
+
+      <button data-action="mousedown->modal#open" data-modal-id="importStravaRunsModal" class="btn btn-primary btn-muted">
+        Sync runs from Strava
+      </button>
     </div>
 
     <!-- Disconnect Strava Account Modal Backdrop -->
@@ -110,15 +114,57 @@
       </button>
     </div>
 
+    <!-- Import Strava Runs Modal Backdrop -->
+    <div
+      data-modal-target="backdrop"
+      data-modal-id="importStravaRunsModal"
+      data-action="mousedown->modal#backdropClose"
+      class="modal-backdrop opacity-0 pointer-events-none"></div>
+
+    <!-- Import Strava Runs Modal -->
+    <div
+      id="importStravaRunsModal"
+      role="dialog"
+      aria-label="Import Strava Runs Confirmation"
+      tabindex="-1"
+      data-modal-target="modal"
+      class="modal opacity-0 scale-75 pointer-events-none"
+    >
+      <div class="flex flex-col space-y-1.5 text-center sm:text-left">
+        <h2 class="text-lg font-semibold leading-none tracking-tight">Sync Runs from Strava?</h2>
+        <p class="text-soft text-sm">Are you sure you want to sync all your runs from your Strava account to PaceMaker? None of your existing runs on PaceMaker will be affected.</p>
+      </div>
+
+      <div class="flex flex-col-reverse sm:flex-row sm:justify-end sm:space-x-2 mt-4">
+        <button data-action="mousedown->modal#close" data-modal-id="importStravaRunsModal" type="button" class="btn btn-dark btn-muted mt-2 sm:mt-0">Cancel</button>
+        <%= button_to 'Sync runs', strava_imports_path, class: 'btn btn-primary btn-muted gap-2 w-full' %>
+      </div>
+
+      <button data-action="mousedown->modal#close" type="button" data-modal-id="importStravaRunsModal" class="modal-x-btn">
+        <%= inline_svg_tag 'icons/x-mark.svg', class: 'size-4' %>
+        <span class="sr-only">Close</span>
+      </button>
+    </div>
   <% else %>
     <%= button_to user_strava_omniauth_authorize_path, data: { turbo: 'false' }, class: 'rounded-lg hover:brightness-75 transition-all duration-200 ease-in-out' do %>
       <%= image_tag 'btn_strava_connect.svg', alt: 'Connect to Strava', class: 'rounded-lg' %>
     <% end %>
+
+    <p class="help-text my-1">PaceMaker is compatible with Strava. Connect your Strava account to sync your activities with PaceMaker.</p>
   <% end %>
 </div>
 
 <%= form_for resource, as: resource_name, url: registration_path(resource_name), data: { controller: "form-validation" }, html: { method: :put, novalidate: true } do |f| %>
   <%= render 'devise/shared/error_messages', resource: resource %>
+
+  <div class="flex items-center gap-2">
+    <%= hidden_field_tag 'user[settings][auto_import_strava]', 'false' %>
+    <%= f.fields_for :settings do |settings_form| %>
+      <%= settings_form.check_box :auto_import_strava, { checked: @user.auto_import_strava?, class: 'form-input-checkbox', id: 'auto_import_strava_checkbox' }, true, false %>
+      <%= settings_form.label :auto_import_strava, 'Automatically sync Strava activity', class: 'form-check-label text-sm', for: 'auto_import_strava_checkbox' %>
+    <% end %>
+  </div>
+  <p class="text-xs text-soft mt-0.5">Currently, activities can only sync from Strava to PaceMaker. Syncing from PaceMaker to Strava will be available in a future update. Check back later!</p>
 
   <div class="py-6 mt-6 border-t border-slate-200 dark:border-slate-700">
     <h2 class="mb-2 text-lg font-normal text-slate-700 dark:text-slate-200">Profile</h2>
