--- a/app/views/runs/_run.html.erb
+++ b/app/views/runs/_run.html.erb
@@ -93,5 +93,5 @@
     </div>
   <% end %>
 
-  <%= link_to 'View on Strava', run.strava_url, class: 'btn-link text-xs' if run.strava_url? %>
+  <%= link_to 'View on Strava', run.strava_url, class: 'cursor-pointer font-semibold text-[#fc4c02] hover:underline focus:ring-transparent text-xs' if run.strava_url? %>
 </div>
