--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -3,7 +3,10 @@
 <% content_for :masthead do %>
   <div class="text-center">
     <div class="flex justify-center">
-      <%= inline_svg_tag 'logo.svg', class: 'w-64' %>
+      <div class="flex flex-col items-center">
+        <%= inline_svg_tag 'logo.svg', class: 'w-64' %>
+        <%= inline_svg_tag 'compatible_with_strava.svg', class: 'w-28' %>
+      </div>
     </div>
     <h1 class="subheading my-6">Forgot password?</h1>
   </div>
@@ -21,7 +24,7 @@
   <%= form_for resource, as: resource_name, url: password_path(resource_name), data: { controller: 'form-validation' }, html: { method: :post, novalidate: true } do |f| %>
     <%= render 'devise/shared/error_messages', resource: resource %>
 
-    <p class="mb-6 text-soft text-sm">Enter your email address below. We&#8217;ll send you an email with instructions and a link to reset your password.</p>
+    <p class="mb-6 text-soft text-sm text-pretty">Enter your email address below. We&#8217;ll send you an email with instructions and a link to reset your password.</p>
 
     <div class="form-group">
       <%= f.label :email, class: 'form-label' %>
