--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,15 @@
           <main class="container px-5 mx-auto mt-24 mb-40">
             <%= yield %>
           </main>
+
+          <footer class="text-center mt-4 text-sm text-soft p-4">
+            <p class="mb-1">&copy; <%= Time.current.year %> PaceMaker. All rights reserved.</p>
+            <div class="flex justify-center gap-x-6">
+                <%= link_to 'Privacy Policy', privacy_policy_path, class: 'btn-link underline' %>
+                <%= link_to 'Strava Data Usage Policy', strava_policy_path, class: 'btn-link underline' %>
+                <%= link_to 'Google Data Usage Policy', google_policy_path, class: 'btn-link underline' %>
+            </div>
+          </footer>
         </div>
       </div>
     </div>
