fix: add missing “new” in “automatically sync new Strava activities” description text

--- a/app/views/devise/registrations/_edit_user.html.erb
+++ b/app/views/devise/registrations/_edit_user.html.erb
@@ -214,7 +214,7 @@
     <% end %>
   </div>
   <p class="help-text mt-1 mb-3 italic">By checking this box, you consent to PaceMaker automatically accessing and displaying your new Strava activities on your PaceMaker profile. Activities that you have already imported from Strava will continue to be synced even if you uncheck this box.</p>
-  <p class="help-text text-pretty">Currently, activities can only be synced from Strava to PaceMaker. Syncing from PaceMaker to Strava will be available in a future update. If you have opted in to automatically sync Strava activities, this feature will be enabled automatically when it becomes available.</p>
+  <p class="help-text text-pretty">Currently, activities can only be synced from Strava to PaceMaker. Syncing from PaceMaker to Strava will be available in a future update. If you have opted in to automatically sync new Strava activities, this feature will be enabled automatically when it becomes available.</p>
 
   <div class="py-6 mt-6 border-t border-slate-200 dark:border-slate-700">
     <h2 class="mb-2 text-lg font-normal text-slate-700 dark:text-slate-200">Profile</h2>
