--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -126,7 +126,7 @@
           </div>
         <% else %>
           <div class="mt-12">
-            <p class="text-soft text-center">No teams have been created recently by users you know. Come back later!</p>
+            <p class="text-soft text-center text-pretty">No teams have been created recently by users you know. Come back later!</p>
           </div>
         <% end %>
       </div>
@@ -159,7 +159,7 @@
             </div>
           <% else %>
             <div class="mt-12">
-              <p class="text-soft text-center">No pending join requests were found for any of your teams. Check back later!</p>
+              <p class="text-soft text-center text-pretty">No pending join requests were found for any of your teams. Check back later!</p>
             </div>
           <% end %>
         </div>
@@ -207,7 +207,7 @@
           </div>
         <% else %>
           <div class="mt-12">
-            <p class="text-soft text-center">No recent streak advancements by users you know. Come back later!</p>
+            <p class="text-soft text-center text-pretty">No recent streak advancements by users you know. Come back later!</p>
           </div>
         <% end %>
       </div>
@@ -226,7 +226,7 @@
           </div>
         <% else %>
           <div class="mt-12">
-            <p class="text-soft text-center">No recent runs by users you know. Come back later!</p>
+            <p class="text-soft text-center text-pretty">No recent runs by users you know. Come back later!</p>
           </div>
         <% end %>
       </div>
